# Barcola

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: AAPL_2023_sample.csv  MSFT_2023_sample.csv  constant_price.csv  monotonic_down.csv  monotonic_up.csv  single_point.csv
src/: CMakeLists.txt
src/analysis/: correlation.cpp  correlation.h  market_data_analysis.cpp  market_data_analysis.h  mean_reversion.cpp  mean_reversion.h
src/backtest/: backtest_engine.cpp  backtest_engine.h  performance.cpp  performance.h  strategy.h
src/core/: price_history.cpp  price_history.h  price_point.cpp  price_point.h  time_utils.cpp  time_utils.h
src/indicators/: bollinger_bands.cpp  bollinger_bands.h  moving_average.cpp  moving_average.h  rsi.cpp  rsi.h
src/risk/: dynamic_hedging.cpp  dynamic_hedging.h  position_sizing.cpp  position_sizing.h  slippage_model.cpp  slippage_model.h
src/simulation/: monte_carlo.cpp  monte_carlo.h
strategies/: CMakeLists.txt  mean_reversion_strategy.cpp  mean_reversion_strategy.h
tests/: CMakeLists.txt  test_backtest_engine.cpp  test_bollinger.cpp  test_correlation.cpp  test_csv_io.cpp  test_dynamic_hedging.cpp  test_market_data.cpp  test_mean_reversion.cpp  test_mean_reversion_strategy.cpp  test_monte_carlo.cpp  test_moving_average.cpp  test_performance.cpp  test_position_sizing.cpp  test_price_history.cpp  test_price_point.cpp  test_rsi.cpp  test_slippage.cpp  test_time_utils.cpp
